<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/preferences_section_title">
		<EditTextPreference
            android:key="@string/shake_count_id"
            android:defaultValue="4"
            android:title="@string/shake_count_title"
            android:summary="@string/shake_count_summary"
            android:dialogTitle="@string/shake_count_dialogTitle"
            android:inputType="number"
            android:numeric="integer"
            android:maxLength="1"
        />
		<EditTextPreference
            android:key="@string/threshold_id"
            android:defaultValue="2.75f"
            android:title="@string/threshold_title"
            android:summary="@string/threshold_summary"
            android:dialogTitle="@string/threshold_dialogTitle"
            android:inputType="numberDecimal"
        	android:numeric="decimal"
            android:maxLength="4"
        />
		<EditTextPreference
            android:key="@string/vibrate_time_id"
            android:defaultValue="250"
            android:title="@string/vibrate_time_title"
            android:summary="@string/vibrate_time_summary"
            android:dialogTitle="@string/vibrate_time_dialogTitle" 
            android:inputType="number"
			android:numeric="integer"
            android:maxLength="3"
        />
	</PreferenceCategory>
</PreferenceScreen>
